// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BLOB.proto";
import "./CUState.proto";

package connection.protobuf;

message CUStatus {
extensions 3 to 103;

  optional connection.protobuf.CUState state = 1;
  optional ccsds_mal.protobuf.BLOB sLEReport = 2;
}
